# PolSARFeatureExtraction

./: README.md
Artifacts/: Performance_Metrics_AE.csv
FeatureExtractor/: Autoencoder.cpp  Autoencoder.h  AutoencoderMenu.cpp  Data.cpp  Data.h  Feature.cpp  Feature.h  KNN.cpp  KNN.h  Performance.cpp  Performance.h  Utils.cpp  Utils.h  Visualisation.cpp  Visualisation.h  main.cpp
Handcrafted_Features/: CMakeLists.txt
Handcrafted_Features/MPEG-7/: CmakeLists.txt  Convert.cpp  Feature.cpp  Feature.h  FexWrite.cpp  Frame.h
Handcrafted_Features/MPEG-7/Descriptors/: ColorStructure.cpp  DominantColor.cpp  DominantColor.h  ScalableColor.cpp
Handcrafted_Features/MPEG-7/Extraction/: ColorStructureExtraction.cpp  DominantColorExtraction.cpp  RegionShapeExtraction.cpp
Handcrafted_Features/src/: DataProcess.cpp  DataProcess.hpp  KNN.cpp  KNN.hpp  Utils.cpp  Utils.h  cvFeatures.cpp  cvFeatures.hpp  cv_hdf5.hpp  dataset_hdf5.cpp  dataset_hdf5.hpp  elbp.hpp  glcm.cpp  glcm.hpp  main.cpp  morph.cpp  morph.hpp  ober.cpp  ober.hpp  sarFeatures.cpp  sarFeatures.hpp  specklefilter.cpp  specklefilter.hpp  torchDataSet.hpp
KNN/: Autoencoder.cpp  Autoencoder.h  CMakeLists.txt  Data.cpp  Data.h  Feature.cpp  Feature.h  KNN.cpp  KNN.h  KNN_old.cpp  KNN_old.h  Performance.cpp  Performance.h  Utils.cpp  Utils.h  main.cpp  main_autoEncoder.cpp
Modern_Features/: Autoencoder.cpp  Autoencoder.h  AutoencoderOperations.cpp  Data.cpp  Data.h  Feature.cpp  Feature.h  KNN.cpp  KNN.h  Performance.cpp  Utils.cpp  Utils.h  Visualisation.cpp  Visualisation.h  main.cpp
features/: CMakeLists.txt
features/data/: ROIs1158_spring_lc_1_p30.tif  ROIs1158_spring_s1_1_p30.tif  lcFileList.txt  s1FileList.txt
features/src/: Geotiff.hpp  KNN.cpp  KNN.hpp  Param.h  Utils.cpp  Utils.h  cvFeatures.cpp  cvFeatures.hpp  cv_hdf5.cpp  cv_hdf5.hpp  elbp.cpp  elbp.hpp  glcm.cpp  glcm.hpp  main.cpp  mp.cpp  mp.hpp  ober.cpp  ober.hpp  sarFeatures.cpp  sarFeatures.hpp  sen12ms.cpp  sen12ms.hpp  specklefilter.cpp  specklefilter.hpp  torchDataSet.cpp
features/src/MPEG-7/: CmakeLists.txt  Feature.cpp  Feature.h  FexWrite.h
features/src/MPEG-7/Extraction/: ColorStructureExtraction.h  EdgeHistExtraction.cpp  RegionShapeExtraction.h
